--- a/FootStone.TankShared.csproj
+++ b/FootStone.TankShared.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\ApplyItemPresentationSystem.cs" />
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\CharacterMoveSystem.cs" />
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\CharacterTriggerSystem.cs" />
+    <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\ClientTriggerProcessSystem.cs" />
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\DespawnSystem.cs" />
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\ItemStateServerSystem.cs" />
     <Compile Include="Packages\com.footstone.kitchenshared\FootStone.KitchenShared\Systems\MoveForwardSystem.cs" />
@@ -222,6 +223,9 @@
     </Reference>
     <Reference Include="Unity.Physics.Hybrid">
       <HintPath>D:/work/ECS/Kitchen/Server/Library/ScriptAssemblies/Unity.Physics.Hybrid.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Rendering.Hybrid">
+      <HintPath>D:/work/ECS/Kitchen/Server/Library/ScriptAssemblies/Unity.Rendering.Hybrid.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>D:/work/ECS/Kitchen/Server/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
